# miniserde-enum

./: .gitignore  Cargo.toml  README.md
src/: attr.rs  de.rs  lib.rs  ser.rs
tests/: deserialize.rs  serialize.rs
