[package]
name = "miniserde-enum"
version = "0.1.1"
authors = ["Aymeric Beringer <aymeric.beringer@epita.fr>"]
edition = "2018"
description = "Derive macros for miniserde on enums"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/etwyniel/miniserde-enum"
documentation = "https://docs.rs/crate/miniserde-enum"
keywords = ["miniserde", "enum"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dev-dependencies]
miniserde = "0.1"

[dependencies]
syn = { version = "1.0", features = ["derive", "full"] }
quote = "1.0"
proc-macro2 = "1.0"
miniserde = "0.1" # TODO: remove
